--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,20 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- 前置转发-->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-integrator</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
+            <!-- 分布式事务-->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-transaction</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -204,6 +218,8 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>ruoyi-integrator</module>
+        <module>ruoyi-transaction</module>
     </modules>
     <packaging>pom</packaging>
 
