--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -91,7 +91,7 @@ mybatis:
     # 搜索指定包别名
     typeAliasesPackage: com.ruoyi.**.domain
     # 配置mapper的扫描，找到所有的mapper.xml映射文件
-    mapperLocations: classpath*:mapper/**/*Mapper.xml
+    mapperLocations: classpath*:mapper/**/*Mapper.xml,classpath*:mapper/**/*MapperAuto.xml
     # 加载全局的配置文件
     configLocation: classpath:mybatis/mybatis-config.xml
 
