两阶段提交

--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>ruoyi-generator</artifactId>
         </dependency>
 
+        <!-- 代码生成-->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-integrator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
