--- a/ruoyi-integrator/pom.xml
+++ b/ruoyi-integrator/pom.xml
@@ -13,10 +13,15 @@
 
     <dependencies>
 
-        <!-- 通用工具-->
+        <!-- Mysql驱动包 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.ruoyi</groupId>
-            <artifactId>ruoyi-common</artifactId>
+            <artifactId>ruoyi-framework</artifactId>
         </dependency>
 
     </dependencies>
