--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <poi.version>3.17</poi.version>
         <velocity.version>1.7</velocity.version>
         <jwt.version>0.9.1</jwt.version>
+        <jta.version>1.1</jta.version>
     </properties>
 	
     <!-- 依赖声明 -->
@@ -157,6 +158,13 @@
                 <groupId>com.github.penggle</groupId>
                 <artifactId>kaptcha</artifactId>
                 <version>${kaptcha.version}</version>
+            </dependency>
+
+            <!-- jta -->
+            <dependency>
+                <groupId>javax.transaction</groupId>
+                <artifactId>jta</artifactId>
+                <version>${jta.version}</version>
             </dependency>
             
             <!-- 定时任务-->
