--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,13 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- 案例项目-->
+            <dependency>
+                <groupId>com.ruoyi</groupId>
+                <artifactId>ruoyi-demo</artifactId>
+                <version>${ruoyi.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -228,6 +235,7 @@
         <module>ruoyi-common</module>
         <module>ruoyi-integrator</module>
         <module>ruoyi-transaction</module>
+        <module>ruoyi-demo</module>
     </modules>
     <packaging>pom</packaging>
 
