--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>ruoyi-demo</artifactId>
         </dependency>
 
+        <!-- 开放项目 -->
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-open</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
